--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Bobby\\.virtualenvs\\mapper-53WIQVXL\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\cheet\\.virtualenvs\\mapper-g23v-Cs1\\Scripts\\python.exe"
 }
